tests/error/misc_errors/type_attr_not_module.py
from tests.util import compile_guppy


@compile_guppy
def f(x: "int.bar") -> None:
    return
