tests/error/misc_errors/type_attr_not_module.err
Error: Expected a module (at $FILE:5:10)
  | 
3 | 
4 | @compile_guppy
5 | def f(x: "int.bar") -> None:
  |           ^^^ Expected a module, got type `int`

Guppy compilation failed due to 1 previous error
